# AtomVM_Zenoh

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  GettingStarted.md  mise.toml
.github/workflows/: esp32-build.yaml
doc/src/: programmers-guide.md
docs/: zenoh_troubleshooting.md
examples/elixir/esp32/: CMakeLists.txt  EspConfig.ex.example  GiocciClient.ex  GiocciClientExample.ex  M5Blink.ex  ZenohPub.ex  ZenohSub.ex
examples/erlang/esp32/: CMakeLists.txt  usb_serial_jtag_rot13.erl
examples/gleam/blink/: CMakeLists.txt  gleam.toml  manifest.toml
examples/gleam/blink/src/: blink.gleam
libs/avm_esp32/src/: uart.erl
libs/estdlib/src/: string.erl
libs/exavmlib/lib/: CMakeLists.txt  M5.ex  Zenoh.ex
libs/gleam_avm/src/gleam_avm/: m5.gleam  zenoh.gleam
src/libAtomVM/: defaultatoms.def  external_term.c  external_term.h  globalcontext.c  globalcontext.h  nifs.c
tests/erlang_tests/: test_binary_to_term.erl
tests/libs/eavmlib/: test_ahttp_client.erl
tests/libs/estdlib/: test_gen_tcp.erl  test_net_kernel.erl  test_tcp_socket.erl
tests/libs/jit/: jit_riscv64_tests.erl
